--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+bleach==6.2.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
@@ -8,7 +9,10 @@ Django==5.1.2
 django-allauth==65.1.0
 django-appconf==1.0.6
 django-compressor==4.5.1
+django-markdownify==0.9.5
 idna==3.10
+Markdown==3.7
+markdown2==2.5.1
 oauthlib==3.2.2
 pillow==10.4.0
 pycparser==2.22
@@ -24,4 +28,6 @@ six==1.16.0
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.1
+tinycss2==1.4.0
 urllib3==2.2.3
+webencodings==0.5.1
